2001-02-25  Roland McGrath  <roland@frob.com>

	* readonly-changed.c: New file.
	* Makefile (OTHERSRCS): Add it.

	* init-first.c: Include <stdlib.h> for exit decl.

2001-01-30  Neal H Walfield   <neal@cs.uml.edu>

	* diskfs.h: Fix comment (fsys_shutdown -> fsys_goaway).

2001-01-07  Marcus Brinkmann  <marcus@gnu.org>

	* diskfs.h: Make diskfs_dirstat_size const.

2001-01-07  Marcus Brinkmann  <marcus@gnu.org>

	* file-statfs.c: Include <string.h>.

2000-12-26  Roland McGrath  <roland@frob.com>

	* file-statfs.c (diskfs_S_file_statfs): Zero out the struct statfs
	before calling diskfs_set_statfs.  Set f_namelen to diskfs_name_max
	after the call.
	* diskfs.h: Update comment.

2000-12-02  Roland McGrath  <roland@frob.com>

	* node-times.c (diskfs_set_node_times): Make individual flag checks
	race-proof so we don't lose any flag settings.

2000-07-26  Mark Kettenis  <kettenis@gnu.org>

	* Makefile (HURDLIBS): Reorder libs such that the threads lib
	comes before the ports lib.  This makes sure the functions in
	libthreads properly override the stubs in libports with the new
	dynamic linker semantics in glibc 2.2.

2000-07-18  Thomas Bushnell, BSG  <tb@mit.edu>

	* io-seek.c (diskfs_S_io_seek): Don't use CHANGE_NODE_FIELD
	anymore; it was causing problems and was a gross hack anyway.

2000-05-14  Marcus Brinkmann  <Marcus.Brinkmann@ruhr-uni-bochum.de>

	* priv.h (DEFAULT_SYNC_INTERVAL): New macro.
	(DEFAULT_SYNC_INTERVAL_STRING): Likewise.
	(STRINGIFY): Likewise.
	(STRINGIFY_1): Likewise.
	* opts-common.h (diskfs_common_options): Use
	DEFAULT_SYNC_INTERVAL_STRING instead hardcoded value.
	* sync-default.h: Include "priv.h". Use DEFAULT_SYNC_INTERVAL
	instead hardcoded value.

2000-04-29  Marcus Brinkmann  <Marcus.Brinkmann@ruhr-uni-bochum.de>

	* init-main.c (diskfs_init_main): Dereference BOOTSTRAP before
	checking for MACH_PORT_NULL.

2000-03-17  Roland McGrath  <roland@baalperazim.frob.com>

	* file-exec.c (diskfs_S_file_exec): Fix typo and braino in last change.