@@ -1,3 +1,12 @@
+2001-03-28  Marcus Brinkmann  <marcus@gnu.org>
+
+	* dir-lookup.c (diskfs_S_dir_lookup): New variable USER. Store new
+	iouser in that variable and free it after creating the protid for
+	DIRPORT.
+	* trans-callback.c (_diskfs_translator_callback2_fn): Likewise.
+	* io-restrict-auth.c (diskfs_S_io_restrict_auth): Likewise.
+	* io-reauthenticate.c (diskfs_S_io_reauthenticate): Likewise.
+
 2001-02-25  Roland McGrath  <roland@frob.com>
 
 	* readonly-changed.c: New file.
